--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .navbar{
 
 border: none;
-background-color: yellow;
+background-color: darkbrown;
 color: black;
 }
 body{
@@ -20,7 +20,7 @@ body{
 
 .center{
 	width: 90%;
-	background-color: black;
+	background-color: yellow;
 
 }
 .container
